# PuzzleSolver

./: CMakeLists.txt  GeneratedResults.cpp  PuzzleController.cpp  PuzzleGenerator.cpp  README.md  constheader.h  debug.h  generatedresults.h  generator.h  geometry.cpp  geometry.h  main.cpp  opencv_project.pro  puzzle.cpp  puzzle.cpp.QS5340  puzzle.h  puzzlecontroller.h  puzzlecutter.cpp  puzzlecutter.h  view.h
comparator/: puzzlecomparator.cpp  puzzlecomparator.h  puzzlecomparatorfirstimpl.cpp  puzzlecomparatorfirstimpl.h
solver/: puzzlesolver.cpp  puzzlesolver.h  puzzlesolverdoublecomp.cpp  puzzlesolverdoublecomp.h  puzzlesolvergreedy.cpp  puzzlesolvergreedy.h  puzzlesolversimple.cpp  puzzlesolversimple.h
